tests-integration/tests/roundtrip/invalid/syntax/missing_token/05/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/syntax/missing_token/05/input.essence:2:17:
  |
2 | such that x = y =
  |                 ^
Missing Expression

tests/roundtrip/invalid/syntax/missing_token/05/input.essence:2:17:
  |
2 | such that x = y =
  |                 ^
Missing ,

tests/roundtrip/invalid/syntax/missing_token/05/input.essence:3:1:
  |
3 | such that z = 3
  | ^
Missing Expression

